addding framework hinting

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ __pycache__/banner.cpython-311.pyc
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/Euri.iml
 .env
+__pycache__/module_framework.cpython-311.pyc
