--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ __pycache__/banner.cpython-311.pyc
 .idea/Euri.iml
 .env
 __pycache__/module_framework.cpython-311.pyc
+__pycache__/module_report.cpython-311.pyc
